--- a/docker/jetson-tx2/Dockerfile
+++ b/docker/jetson-tx2/Dockerfile
@@ -33,32 +33,38 @@ ENTRYPOINT ["/ros_entrypoint.sh"]
 RUN mkdir -p /opt/catkin_ws/src
 ENV CATKIN_WS /opt/catkin_ws
 WORKDIR ${CATKIN_WS}
-RUN . /opt/ros/noetic/setup.sh && catkin_make 
+RUN ./opt/ros/noetic/setup.sh && catkin_make 
 # RUN apt update 
 # RUN pip install -U rosdep 
 # RUN rosdep init 
 # RUN rosdep update
 
-RUN echo "Cloning Software Packages"
+RUN echo "Cloning ROS catkin_ws for Hydrus"
 WORKDIR ${CATKIN_WS}
 RUN cd ./src 
 RUN git clone --recursive https://github.com/Rumarino-Team/hydrus
+RUN echo "Sourcing catkin_ws"
+WORKDIR ${CATKIN_WS}
+RUN ./opt/ros/noetic/setup.sh && catkin_make 
+RUN echo "Installing Teledyne RD Instruments Proprietary Python3 Driver for Wayfinder Doppler Velocity Logger (DVL)"
+WORKDIR ${CATKIN_WS}
 RUN cd ./src/hydrus/jetson-tx2/catkin_ws/src/nav_sensors/src/Wayfinder && pip3 install .
 
+RUN echo "Sourcing catkin_ws"
 WORKDIR ${CATKIN_WS}
-RUN . /opt/ros/noetic/setup.sh && catkin_make 
+RUN ./opt/ros/noetic/setup.sh && catkin_make 
+RUN echo "Installing ROS Dependencies"
 RUN apt update 
 RUN pip install -U rosdep 
+RUN echo "Initializing ROS Dependencies"
 RUN rosdep init 
+RUN echo "Updating ROS Dependencies"
 RUN rosdep update
 
-
-
-#Installing Arduino-CLI:
-
+RUN echo "Installing Arduino-CLI"
 RUN curl -fsSL https://raw.githubusercontent.com/arduino/arduino-cli/master/install.sh | BINDIR=/usr/local/bin sh -s 0.17.0
 
-# Build ROS Serial
+RUN echo "Build ROS Serial"
 RUN . /opt/ros/noetic/setup.sh && catkin_make \
   cd $CATKIN_WS/src &&\
   git clone https://github.com/ros-drivers/rosserial.git &&\
@@ -66,7 +72,7 @@ RUN . /opt/ros/noetic/setup.sh && catkin_make \
   catkin_make &&\
   catkin_make install
 
-# Create ROS Serial Arduino builder
+RUN echo "Creating ROS Serial Arduino builder"
 RUN . /opt/ros/noetic/setup.sh && catkin_make \
   cd /tmp &&\
   rosrun rosserial_arduino make_libraries.py .
