--- a/jetson-tx2/catkin_ws/src/nav_sensors/config/dvl.yaml
+++ b/jetson-tx2/catkin_ws/src/nav_sensors/config/dvl.yaml
@@ -1,13 +1,34 @@
 # Config file for DVL Component
 
-DVL_NODE_NAME: "camera"
-DVL_TOPIC_NAME: "hydrus/camera"
-DVL_TARGET_ROUTE: 'http://127.0.0.1:5000/camera'
+node_name: "dvl_driver"  # set node name
+topic_name: "/hydrus/dvl" # set topic 
+frame_id: 'wayfinder_frame' # set frame
 
-#these may be constansts in the system **change potentially 
-DVL_TRANSMISSION_DELAY: 3
-DVL_QUEUE_SIZE: 10
-DVL_RATE: 10
 
-DVL_PORT: "/dev/ttyUSB0"
-DVL_BAUDRATE: 19200
+transmission_rate: 10 # set rate
+queue_size: 10 # set queue size 
+
+baudrate: 115200 # set baudrate
+port: '/dev/ttyUSB0' # set port 
+sw_trigger: 1 # set software trigger
+
+max_depth: 10 # set max depth
+max_range: 10 # set max range
+ping_time: 1  # set ping time
+
+roll_angle: 0 # set roll angle
+pitch_angle: 0 # set pitch angle
+yaw_angle: 45 # set yaw_angle
+
+start_time: 0 # set start_time to initialize previous time
+
+# MACROS for Path to be used to determine the name of the logger file to be created based on the current
+# log files inside the directory
+prev_logger_dir: '/opt/catkin_ws/src/hydrus/jetson-tx2/catkin_ws/src/nav_sensors/logs'
+prev_logger_pref: "dvl_log_attempts.txt"
+
+# MACROS for Path to be used as the log file for the dvl
+logger_dir:  '/opt/catkin_ws/src/hydrus/jetson-tx2/catkin_ws/src/nav_sensors/logs'
+logger_num_format: "%06d.log"
+write_command: 'w'
+read_command: 'r'
